--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -6,12 +6,47 @@
  
  
  <body>
-   <h1> Macaroni</h1>
-   
+   <h1> <strong>Macaroni</strong></h1>
+  
+   <img src="images/macaroni.jpg" alt=" a picture of baked macaroni"
 
+    <h2>  Description</h2>
 
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+    </p>
 
+    <p>
+        Nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
+    </p>
+
+    <h3> <strong>Ingredients</strong></h3>
+    <p>
+        <ul>
+            <li>1 cup sharp cheddar cheese</li>
+            <li>1 cup evaporated milk</li>
+            <li> 16oz of penne pasta</li>
+            <li> 1 Tsp salt</li>
+            <l> 1 Tsp pepper</l>
+        </ul>
+    </p>
+        
+        <h2><strong>Steps</strong> </h2>
+        <p> 
+            <ol>
+                <li> boil a pot of salted water</li>
+                <li> boil pasta in water for 10 minutes</li>
+                <li> remove pasta</li>
+                <li>preheat oven to 425</li> 
+                <li> add butter, cheese, and evaporated milk to pot</li>
+                <li> salt, pepper, and garlic to taste as mixture begins to simmer for 5 minutes</li>
+                <li> add back in pasta, stur carefully</li>
+                <li> pour mixture in casserole dish</li> 
+                <li> let cook in oven for 30 minutes</li>
+
+            </ol>
+        </p>
 
  </body>
 </html>
