Corrected image source

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -8,9 +8,13 @@
  <body>
    <h1> <strong>Macaroni</strong></h1>
   
-   <img src="images/macaroni.jpg" alt=" a picture of baked macaroni"
+    <img src="../images/mac.jpg" alt="baked mac n cheese"
+    
 
-    <h2>  Description</h2>
+  
+   <p>
+        <h2>  Description</h2>
+    </p>
 
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
@@ -32,7 +36,7 @@
         </ul>
     </p>
         
-        <h2><strong>Steps</strong> </h2>
+        <h3><strong>Steps</strong> </h3>
         <p> 
             <ol>
                 <li> boil a pot of salted water</li>
