--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
  
  
  <body>
-  <h1>Odin Recipes</h1>
-  <a href="recipes/macaroni.html">Macaroni</a>
 
+  <h1>Odin Recipes</h1>
+   <ul>
+    <li><a href="recipes/macaroni.html">Macaroni</a></li>
+    <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+    <li><a href="recipes/soup.html">Soup</a></li>
+  </ul>
 
 </body>
 </html>
